@@ -1,4 +1,5 @@
-Mo 30. Mai 21:10:53 CEST 2011
+Mo 30. Mai 21:29:20 CEST 2011
+* Implemented Time::HiRes job scheduling
 * Added passing of startup options. E.g. 
         ./control start daemon.daemonize=no daemon.loopinterval=10
   starts perldaemon in foreground w/ a loopinterval of 10 seconds.
